[workspace]
members = [
	"wsdom-core/",
	"wsdom-macros/",
	"wsdom-macros-decl",
	"wsdom-ts-convert/",
	"wsdom/",
	"wsdom-javascript/",
	"wsdom-dom/",
	"integrations/wsdom-axum/",
	"examples/hello/",
	"examples/counter/",
	"examples/counter-manual/",
	"examples/audio/",
	"examples/computation/",
	"examples/canvas/"
]
resolver = "2"
