[package]
name = "wrmi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wrmi-macros = { path = "../wrmi-macros/" }
wrmi-core = { path = "../wrmi-core/" }
ref-cast = "1"
serde = { version = "1", features = ["derive"] }