[package]
name = "wsdom-core"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ref-cast = "1"
futures-core = "0.3"

[dev-dependencies]
wsdom = { path = "../wsdom/" }
futures-util = { version = "0.3.30" }