[package]
name = "wsdom-macros"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
description = "for the wsdom crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
wsdom-ts-convert = { path = "../wsdom-ts-convert/", version = "0.0.1" }