[package]
name = "wsdom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wsdom-macros = { path = "../wsdom-macros/" }
wsdom-macros-decl = { path = "../wsdom-macros-decl/" }
wsdom-core = { path = "../wsdom-core/" }
wsdom-javascript = { path = "../wsdom-javascript/" }
wsdom-dom = { path = "../wsdom-dom/" }
ref-cast = "1"
serde = { version = "1" }