[package]
name = "counter-manual"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["ws"] }
tokio = { version = "1.34.0", features = ["full"] }
futures-util = { version = "0.3.30" }
wsdom = { path = "../../wsdom/" }
wsdom-axum = { path = "../../integrations/wsdom-axum/" }