[package]
name = "wsdom-axum"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
description = "use wsdom with axum"
repository = "https://github.com/wishawa/wsdom"
documentation = "https://docs.rs/wsdom-axum"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", features = ["sink"] }
axum = { version = "0.7", features = ["ws"] }
wsdom-core = { path = "../../wsdom-core/", version = "0.0.1" }
pin-project-lite = "0.2.13"